<resources>
    <string name="trtcvoiceroom_room_title" formatted="false">房间号: %d</string>
    <string name="trtcvoiceroom_numer_format" formatted="false" >%d人在看</string>
    <string name="trtcvoiceroom_agree">同意</string>
    <string name="trtcvoiceroom_warning_not_empty">"输入不能为空!"</string>
    <string name="trtcvoiceroom_send">发送</string>
    <string name="trtcvoiceroom_main_title" formatted="false">%1s(%2d)</string>
    <string name="trtcvoiceroom_hands_up">点击上麦</string>
    <string name="trtcvoiceroom_seat_locked">座位已锁定</string>
    <string name="trtcvoiceroom_invite_into_seat">邀请上麦</string>
    <string name="trtcvoiceroom_invite_hint">邀请</string>
    <string name="trtcvoiceroom_send_success">发送成功</string>
    <string name="trtcvoiceroom_send_failed">发送失败</string>
    <string name="trtcvoiceroom_enable_mic">您已开启麦克风</string>
    <string name="trtcvoiceroom_disable_mic">您已关闭麦克风</string>
    <string name="trtcvoiceroom_unmuted">您已取消静音</string>
    <string name="trtcvoiceroom_muted">您已静音</string>
    <string name="trtcvoiceroom_host_only">主播才能操作哦</string>
    <string name="trtcvoiceroom_input_empty">请输入内容</string>
    <string name="trtcvoiceroom_me">我</string>
    <string name="trtcvoiceroom_fetching_host_info">房主信息获取中</string>
    <string name="trtcvoiceroom_host_offline">主播未上线</string>
    <string name="trtcvoiceroom_anchor_enter_seat">%1s上%2d号麦</string>
    <string name="trtcvoiceroom_anchor_leave_seat">%1s下%2d麦</string>
    <string name="trtcvoiceroom_mute_seat">%d号位被禁言</string>
    <string name="trtcvoiceroom_unmute_seat">%d号位解除禁言</string>
    <string name="trtcvoiceroom_anchor_close_seat">房主封禁%d号位</string>
    <string name="trtcvoiceroom_anchor_open_seat">房主解禁%d号位</string>
    <string name="trtcvoiceroom_host_enter_seat_success">房主占座成功</string>
    <string name="trtcvoiceroom_host_enter_seat_failed">房主占座失败[%1d]:%2s</string>
    <string name="trtcvoiceroom_unmute_him">对 TA 解禁</string>
    <string name="trtcvoiceroom_mute_him">对 TA 禁言</string>
    <string name="trtcvoiceroom_kick_him">请 TA 下麦</string>
    <string name="trtcvoiceroom_invite_him">邀人上麦</string>
    <string name="trtcvoiceroom_lock_seat">封禁麦位</string>
    <string name="trtcvoiceroom_unlock_seat">解禁麦位</string>
    <string name="trtcvoiceroom_req_exp">该请求已过期</string>
    <string name="trtcvoiceroom_accept_failed">接受请求失败[%d]</string>
    <string name="trtcvoiceroom_request_seat">申请上%d号麦</string>
    <string name="trtcvoiceroom_seat_used">这个麦位已经有人了</string>
    <string name="trtcvoiceroom_pick_seat_success">抱%s上麦成功</string>
    <string name="trtcvoiceroom_dismiss_room">房主已解散房间</string>
    <string name="trtcvoiceroom_reject_reqeust">你拒绝上麦申请</string>
    <string name="trtcvoiceroom_host_invite">主播邀请你上%d号麦</string>
    <string name="trtcvoiceroom_still_loading">房间还没准备好</string>
    <string name="trtcvoiceroom_ur_host">您已经是麦上主播了</string>
    <string name="trtcvoiceroom_leave_success">下麦成功</string>
    <string name="trtcvoiceroom_request_seat_hint">申请上麦</string>
    <string name="trtcvoiceroom_leave_seat_hint">下麦</string>
    <string name="trtcvoiceroom_enter_room_failed">进房失败[%1d]:%2s</string>
    <string name="trtcvoiceroom_enter_room_success">进房成功</string>
    <string name="trtcvoiceroom_title">语音聊天室</string>
    <string name="trtcvoiceroom_create_voiceroom">创建语音聊天室</string>
    <string name="trtcvoiceroom_create_topic">主题</string>
    <string name="trtcvoiceroom_create_topic_hint">请输入聊天室主题</string>
    <string name="trtcvoiceroom_create_nickname">昵称</string>
    <string name="trtcvoiceroom_create_nickname_hint">请输入昵称</string>
    <string name="trtcvoiceroom_create_need_host_agree">上麦需要房主同意</string>
    <string name="trtcvoiceroom_quality">音质选择</string>
    <string name="trtcvoiceroom_quality_standard">标准</string>
    <string name="trtcvoiceroom_quality_music">音乐</string>
    <string name="trtcvoiceroom_create_button">创建聊天室</string>
    <string name="trtcvoiceroom_enter_room_hint">%s进房</string>
    <string name="trtcvoiceroom_exit">当前正在直播，是否退出直播？</string>
    <string name="trtcvoiceroom_choose_hint">请选择</string>
    <string name="trtcvoiceroom_cancel">取消</string>
    <string name="trtcvoiceroom_anchor_exit_room">%1s退房</string>
</resources>
