<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/trtcvoiceroom_bg_main_gradient"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/trtcvoiceroom_ic_back">

        <TextView
            android:id="@+id/main_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true"
            android:text="@string/trtcvoiceroom_create_voiceroom"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/trtcvoiceroom_bg_item_gradient"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/room_id_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trtcvoiceroom_create_topic"
            android:textColor="@color/trtcvoiceroom_text_color_second"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_room_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/trtcvoiceroom_create_topic_hint"
            android:maxLines="1"
            android:singleLine="true"
            android:textColorHint="@color/trtcvoiceroom_text_color_hint"
            app:layout_constraintBottom_toBottomOf="@+id/room_id_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_user_name"
            app:layout_constraintTop_toTopOf="@+id/room_id_tag" />

        <View
            android:id="@+id/view_divide"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/trtcvoiceroom_text_color_hint"
            app:layout_constraintTop_toBottomOf="@+id/room_id_tag" />

        <TextView
            android:id="@+id/user_id_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/trtcvoiceroom_create_nickname"
            android:textColor="@color/trtcvoiceroom_text_color_second"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/room_id_tag"
            app:layout_constraintTop_toBottomOf="@+id/view_divide" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="@string/trtcvoiceroom_create_nickname_hint"
            android:textColorHint="@color/trtcvoiceroom_text_color_hint"
            app:layout_constraintBottom_toBottomOf="@id/user_id_tag"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/user_id_tag"
            app:layout_constraintTop_toTopOf="@id/user_id_tag" />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/trtcvoiceroom_button_border"
        android:enabled="true"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/trtcvoiceroom_create_button"
        android:textColor="@drawable/trtcvoiceroom_button_text_color"
        android:textSize="18sp" />
</LinearLayout>
